# phantom-secops

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile.attacker  ETHICS.md  LICENSE  Makefile  README.md  ROADMAP.md  STATUS.md  checkup.ps1  docker-compose.yml  goal.md  index.md  pyproject.toml  requirements-dev.txt  secops-agent.toml  secops-demo.toml
docs/: ARCHITECTURE.md  COMPLETION-PLAN.md  DECISIONS.md  DEMO.md  EXECUTION-PLAN.md  FINAL_RELEASE_AUDIT.md  INDEX.md  INTEGRATIONS.md  INTERVIEW-TALK-TRACK.md  L2-INTEGRATION-PLAN.md  L2-TODO.md  MCP-INTERFACE.md  OPEN_SOURCE_READINESS.md  PUBLIC_DEMO.md  REASONING_SCENARIO.md  RELEASE_NOTES.md  phantom-secops.md
lab/: README.md  _checkup.py  _scan_demo.py
phantom_secops/: __init__.py  cli.py  core.py  defensive_loop.py  evidence_playbook.py  killchain.py  reasoning_scenario.py
reports/: sample-incident-report.md  sample-pentest-report.md
scenarios/: demo_governance.py  full-kill-chain.md  run_kill_chain.py
scripts/: daily-checkup.ps1  goal_verification.py  lint.py  render-mesh-agents.py  run_goal.py  run_goal_model_runner.py
secops_mcp/: __init__.py  approval.py  approve.py  policy.py  server.py  state.py  steps.py
tests/: test_approval.py  test_checkup_fusion.py  test_defensive_loop_contract.py  test_defensive_loop_verification.py  test_demo_governance.py  test_demo_mock_parity.py  test_evidence_playbook_contract.py  test_goal_verification.py  test_host_audit.py  test_ids_scan.py  test_kill_chain_degrade.py  test_kill_chain_log_ingest_wired.py  test_kill_chain_mesh_driver.py  test_kill_chain_pipeline.py  test_kill_chain_timing.py  test_kill_chain_vuln.py  test_lint.py  test_llm_provider.py  test_log_anomaly.py  test_log_ingest.py  test_mcp_audit.py  test_mcp_governance.py  (+24 more)
(+59 files in other folders)
